Fix tooltip arrow border clipping.

--- a/stylesheets/tooltip.less
+++ b/stylesheets/tooltip.less
@@ -22,8 +22,8 @@
       content: '';
       border: 1px solid rgba(0,0,0,0.20);
       background-color: @tooltip-arrow-color;
-      width: 10px;
-      height: 10px;
+      width: 11px;
+      height: 11px;
       position: absolute;
       top: 0;
       left: 0;
